Fix wrapping issue on 1/2 width drop zones

--- a/includes/css/scss/admin-views.scss
+++ b/includes/css/scss/admin-views.scss
@@ -408,9 +408,11 @@ hr{
 	width: 100%;
 	z-index: 1;
 	position: absolute;
-	margin-top: 7px;
+	margin: 10px auto 0;
 	top: 0;
-	line-height: 40px;
+	min-height: 40px;
+	font-size: 13px;
+	line-height: 16px;
 }
 
 
